--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -264,7 +264,7 @@ a:hover {
 
 **********************************************************************/
 #head {
-  background: url(../images/linhascontornoRS.jpg) top center;
+  background: url(../images/linhascontornoRS.webp) top center;
   background-size: auto;
   color: #7C7C7C;
   padding: 30px 0 35px 0;
